# Flambe

./: pyproject.toml
notebooks/: map.ipynb  mule.ipynb  plot.ipynb
