[tool.poetry]
name = "flambe"
version = "0.1.0"
description = "Playing with DuckDB + FireDucks"
authors = ["Andy Armstrong <andy@hexten.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.1.3"
polars = {extras = ["pyarrow"], version = "^1.14.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
